Suggested by Clayton FixBot for [develop (81b141b)] and rule [ApexClassAssertWithoutMessage]

--- a/es-base-code/main/default/classes/CustomerServicesTest.cls
+++ b/es-base-code/main/default/classes/CustomerServicesTest.cls
@@ -5,11 +5,11 @@ public class CustomerServicesTest {
         customerServices.Customer contact = customerServices.getCustomerFields(
             'Contact'
         );
-        system.assertNotEquals(contact, null);
+        system.assertNotEquals(contact, null, 'Assert that contact is not null.');
         customerServices.Customer lead = customerServices.getCustomerFields(
             'Lead'
         );
-        system.assertNotEquals(lead, null);
-        system.assertNotEquals(contact, lead);
+        system.assertNotEquals(lead, null, 'Assert that lead is not null.');
+        system.assertNotEquals(contact, lead, 'Assert that the contacts are not equal.');
     }
 }
